# observability-benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_fluentbit_logs.sh  build.sh  check_metrics.sh  compare_results.py  run_all_benchmarks.sh  run_benchmark.sh  run_matrix_tests.sh  run_opensearch_benchmark.sh  syslog_injector.cpp  validate_opensearch.py
configs/fluent-bit/: fluent-bit-file.conf  fluent-bit-http.conf  fluent-bit-null.conf  fluent-bit-opensearch-noauth-optimized-debug.conf  fluent-bit-opensearch-noauth-optimized.conf  fluent-bit-opensearch-noauth.conf  fluent-bit-opensearch-optimized.conf  fluent-bit-opensearch.conf  fluent-bit-stdout.conf  parsers.conf
configs/injector/: default.conf
configs/injector/profiles/: high_rate.conf  low_rate.conf  medium_rate.conf  stress_test.conf
